# pyversionup

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.cfg  versionup.py
.github/workflows/: gren.yml  pythonpackage.yml  release.yml
tests/: test_main.py
tests/poetory/: pyproject.toml  test_main.py
tests/poetry/: foo.txt  pyproject.toml
tests/setup_cfg/: setup.cfg
