[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[versionup]
files = [ "versionup.py",]
tag = true
tag_prefx = ""
commit = true

[tool.poetry]
name = "pyversionup"
version = "0.0.9"
description = ""
authors = [ "Yohei Tamura <tamuhey@gmail.com>",]
license = "MIT"
[[tool.poetry.packages]]
include = "versionup.py"

[tool.poetry.dependencies]
python = "^3.5"
toml = "^0.10.0"
typing-extensions = "^3.7.4"

[tool.poetry.scripts]
versionup = "versionup:main"

[tool.poetry.dev-dependencies]
twine = "^1.5.0"
pytest = "^5.3.2"
