[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[versionup]
files = [ "versionup.py",]
tag = true
tag_prefx = ""
commit = true

[tool.poetry]
name = "pyversionup"
version = "0.0.11"
description = ""
authors = [ "Yohei Tamura <tamuhey@gmail.com>",]
license = "MIT"
[[tool.poetry.packages]]
include = "versionup.py"

[tool.poetry.dependencies]
python = "^3.6"
toml = "^0.10.0"
typing-extensions = "^3.7.4"
fire = "^0.2.1"

[tool.poetry.scripts]
versionup = "versionup:cli"

[tool.poetry.dev-dependencies]
twine = "^1.5.0"
pytest = "^5.3.2"

[tool.poetry.dev-dependencies.black]
version = "^19.10b0"
allow-prereleases = true
